refactorizar OrderService y consultas