@@ -8,8 +8,12 @@ import co.edu.cesde.pps.exception.InvalidCartStateException;
 import co.edu.cesde.pps.exception.ValidationException;
 import co.edu.cesde.pps.mapper.OrderMapper;
 import co.edu.cesde.pps.model.*;
+import co.edu.cesde.pps.repository.OrderRepository;
+import co.edu.cesde.pps.repository.OrderStatusRepository;
 import co.edu.cesde.pps.util.CalculationUtils;
 import co.edu.cesde.pps.config.AppConfig;
+import jakarta.transaction.Transactional;
+import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
@@ -38,6 +42,8 @@ import java.util.stream.Collectors;
  * - Inyección de OrderRepository
  * - Persistencia real
  */
+@Service
+@Transactional(readOnly = true)
 public class OrderService {
 
     private final OrderMapper orderMapper;
@@ -45,18 +51,20 @@ public class OrderService {
     private final CartService cartService;
     private final AddressService addressService;
     private final ProductService productService;
-    // TODO Etapa 06: private final OrderRepository orderRepository;
-    private final List<Order> ordersInMemory;
+    private final OrderRepository orderRepository;
+    private final OrderStatusRepository orderStatusRepository;
     private final Random random;
 
     public OrderService(UserService userService, CartService cartService,
-                       AddressService addressService, ProductService productService) {
+                        AddressService addressService, ProductService productService,
+                        OrderRepository orderRepository, OrderStatusRepository orderStatusRepository) {
         this.orderMapper = new OrderMapper();
         this.userService = userService;
         this.cartService = cartService;
         this.addressService = addressService;
         this.productService = productService;
-        this.ordersInMemory = new ArrayList<>();
+        this.orderRepository = orderRepository;
+        this.orderStatusRepository = orderStatusRepository;
         this.random = new Random();
     }
 
@@ -86,35 +94,28 @@ public class OrderService {
      * @throws ValidationException si el carrito está vacío o no pertenece al usuario
      * @throws InsufficientStockException si no hay stock suficiente
      */
+    @Transactional
     public OrderDTO checkout(Long userId, Long cartId, Long shippingAddressId,
-                            Long billingAddressId) {
-        // 1. Validar usuario está registrado
+                             Long billingAddressId) {
         User user = userService.findUserEntityOrThrow(userId);
-
-        // 2. Obtener y validar carrito
         Cart cart = cartService.findCartEntityOrThrow(cartId);
 
-        // Validar estado OPEN
         if (cart.getStatus() != CartStatus.OPEN) {
             throw new InvalidCartStateException(cartId, cart.getStatus(),
-                CartStatus.OPEN, "checkout");
+                    CartStatus.OPEN, "checkout");
         }
 
-        // Validar no vacío
         if (cart.getItems() == null || cart.getItems().isEmpty()) {
             throw new ValidationException("Cannot checkout empty cart");
         }
 
-        // Validar que pertenece al usuario
         if (cart.getUser() == null || !cart.getUser().getUserId().equals(userId)) {
             throw new ValidationException("Cart does not belong to user");
         }
 
-        // 3. Validar que las direcciones existen
         Address shippingAddress = addressService.findAddressEntityOrThrow(shippingAddressId);
         Address billingAddress = addressService.findAddressEntityOrThrow(billingAddressId);
 
-        // Validar que las direcciones pertenecen al usuario
         if (!shippingAddress.getUser().getUserId().equals(userId)) {
             throw new ValidationException("Shipping address does not belong to user");
         }
@@ -122,55 +123,57 @@ public class OrderService {
             throw new ValidationException("Billing address does not belong to user");
         }
 
-        // 4. Verificar disponibilidad y stock de todos los productos
         for (CartItem item : cart.getItems()) {
             Product product = item.getProduct();
 
-            // Verificar que el producto esté activo
-            if (!product.getIsActive()) {
+            if (!Boolean.TRUE.equals(product.getIsActive())) {
                 throw new ValidationException("Product '" + product.getName() +
-                    "' is no longer available");
+                        "' is no longer available");
             }
 
-            // Verificar stock suficiente
             if (!CalculationUtils.hasEnoughStock(product.getStockQty(), item.getQuantity())) {
                 throw new InsufficientStockException(product.getProductId(),
-                    product.getSku(), item.getQuantity(), product.getStockQty());
+                        product.getSku(), item.getQuantity(), product.getStockQty());
             }
         }
 
-        // 5. Crear orden con número único
         String orderNumber = generateOrderNumber();
-        OrderStatus pendingStatus = new OrderStatus();
-        pendingStatus.setOrderStatusId(1L); // PENDING
 
-        Order order = new Order(orderNumber, user, pendingStatus,
-                shippingAddress, billingAddress);
-        order.setOrderId(generateNextId());
+        OrderStatus pendingStatus = orderStatusRepository.findByNameIgnoreCase("PENDING")
+                .orElseThrow(() -> new EntityNotFoundException("OrderStatus", "PENDING"));
 
-        // 6. Copiar items del carrito a la orden (congelar precios históricos)
+        Order order = Order.builder()
+                .orderNumber(orderNumber)
+                .user(user)
+                .orderStatus(pendingStatus)
+                .shippingAddress(shippingAddress)
+                .billingAddress(billingAddress)
+                .subtotal(BigDecimal.ZERO)
+                .tax(BigDecimal.ZERO)
+                .shippingCost(BigDecimal.ZERO)
+                .total(BigDecimal.ZERO)
+                .createdAt(LocalDateTime.now())
+                .build();
+
         for (CartItem cartItem : cart.getItems()) {
-            OrderItem orderItem = new OrderItem(
-                order,
-                cartItem.getProduct(),
-                cartItem.getQuantity(),
-                cartItem.getUnitPrice()  // Precio histórico al momento de compra
-            );
-            orderItem.setOrderItemId(generateNextOrderItemId());
+            BigDecimal lineTotal = CalculationUtils.calculateOrderItemLineTotal(
+                    cartItem.getUnitPrice(), cartItem.getQuantity());
 
-            // Calcular lineTotal
-            orderItem.setLineTotal(CalculationUtils.calculateOrderItemLineTotal(
-                cartItem.getUnitPrice(), cartItem.getQuantity()));
+            OrderItem orderItem = OrderItem.builder()
+                    .order(order)
+                    .product(cartItem.getProduct())
+                    .quantity(cartItem.getQuantity())
+                    .unitPrice(cartItem.getUnitPrice())
+                    .lineTotal(lineTotal)
+                    .build();
 
-            // Gestión bidireccional
             order.getItems().add(orderItem);
             orderItem.setOrder(order);
         }
 
-        // 7. Calcular totales
         List<BigDecimal> lineTotals = order.getItems().stream()
                 .map(OrderItem::getLineTotal)
-                .collect(Collectors.toList());
+                .toList();
 
         BigDecimal subtotal = CalculationUtils.calculateOrderSubtotal(lineTotals);
         BigDecimal taxRate = BigDecimal.valueOf(AppConfig.getDefaultTaxRate());
@@ -183,19 +186,15 @@ public class OrderService {
         order.setShippingCost(shippingCost);
         order.setTotal(total);
 
-        // 8. Actualizar stock de productos
         for (CartItem item : cart.getItems()) {
             productService.decreaseStock(item.getProduct().getProductId(),
-                item.getQuantity());
+                    item.getQuantity());
         }
 
-        // 9. Marcar carrito como CONVERTED
         cart.setStatus(CartStatus.CONVERTED);
         cart.setUpdatedAt(LocalDateTime.now());
 
-        // TODO Etapa 06: orderRepository.save(order);
-        // TODO Etapa 06: cartRepository.save(cart);
-        ordersInMemory.add(order);
+        order = orderRepository.save(order);
 
         return orderMapper.toDTO(order);
     }
@@ -220,10 +219,7 @@ public class OrderService {
      * @throws EntityNotFoundException si no existe
      */
     public OrderDTO findByOrderNumber(String orderNumber) {
-        // TODO Etapa 06: Order order = orderRepository.findByOrderNumber(orderNumber)
-        Order order = ordersInMemory.stream()
-                .filter(o -> o.getOrderNumber().equalsIgnoreCase(orderNumber))
-                .findFirst()
+        Order order = orderRepository.findByOrderNumberIgnoreCase(orderNumber)
                 .orElseThrow(() -> new EntityNotFoundException("Order with number: " + orderNumber));
 
         return orderMapper.toDTO(order);
@@ -236,14 +232,8 @@ public class OrderService {
      * @return Lista de OrderDTO
      */
     public List<OrderDTO> findOrdersByUser(Long userId) {
-        userService.findUserEntityOrThrow(userId); // Validar que existe
-
-        // TODO Etapa 06: List<Order> orders = orderRepository.findByUserId(userId);
-        List<Order> userOrders = ordersInMemory.stream()
-                .filter(o -> o.getUser().getUserId().equals(userId))
-                .collect(Collectors.toList());
-
-        return orderMapper.toDTOList(userOrders);
+        userService.findUserEntityOrThrow(userId);
+        return orderMapper.toDTOList(orderRepository.findByUser_UserId(userId));
     }
 
     /**
@@ -253,12 +243,7 @@ public class OrderService {
      * @return Lista de OrderDTO
      */
     public List<OrderDTO> findOrdersByStatus(Long statusId) {
-        // TODO Etapa 06: List<Order> orders = orderRepository.findByOrderStatusId(statusId);
-        List<Order> statusOrders = ordersInMemory.stream()
-                .filter(o -> o.getOrderStatus().getOrderStatusId().equals(statusId))
-                .collect(Collectors.toList());
-
-        return orderMapper.toDTOList(statusOrders);
+        return orderMapper.toDTOList(orderRepository.findByOrderStatus_OrderStatusId(statusId));
     }
 
     /**
@@ -269,13 +254,7 @@ public class OrderService {
      * @return Lista de OrderDTO
      */
     public List<OrderDTO> findOrdersByDateRange(LocalDateTime startDate, LocalDateTime endDate) {
-        // TODO Etapa 06: List<Order> orders = orderRepository.findByCreatedAtBetween(start, end);
-        List<Order> rangeOrders = ordersInMemory.stream()
-                .filter(o -> o.getCreatedAt().isAfter(startDate) &&
-                           o.getCreatedAt().isBefore(endDate))
-                .collect(Collectors.toList());
-
-        return orderMapper.toDTOList(rangeOrders);
+        return orderMapper.toDTOList(orderRepository.findByCreatedAtBetween(startDate, endDate));
     }
 
     /**
@@ -287,12 +266,16 @@ public class OrderService {
      * @return Número de orden único
      */
     public String generateOrderNumber() {
-        String prefix = AppConfig.getOrderNumberPrefix(); // "ORD-"
-        String date = LocalDateTime.now().format(
-            DateTimeFormatter.ofPattern("yyyyMMdd"));
-        String randomPart = String.format("%06d", random.nextInt(1000000));
+        String prefix = AppConfig.getOrderNumberPrefix();
+        String date = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd"));
 
-        return prefix + date + "-" + randomPart;
+        String orderNumber;
+        do {
+            String randomPart = String.format("%06d", random.nextInt(1000000));
+            orderNumber = prefix + date + "-" + randomPart;
+        } while (orderRepository.existsByOrderNumberIgnoreCase(orderNumber));
+
+        return orderNumber;
     }
 
     /**
@@ -318,10 +301,7 @@ public class OrderService {
      * @throws EntityNotFoundException si no existe
      */
     public Order findOrderEntityOrThrow(Long orderId) {
-        // TODO Etapa 06: return orderRepository.findById(orderId)
-        return ordersInMemory.stream()
-                .filter(o -> o.getOrderId().equals(orderId))
-                .findFirst()
+        return orderRepository.findById(orderId)
                 .orElseThrow(() -> new EntityNotFoundException("Order", orderId));
     }
 
